# dns-ip-updater

./: .gitignore  pyproject.toml
src/dns_ip_updater/: main.py
