[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dns-ip-updater"
version = "0.1.0"
description = "A script to update IONOS DNS records to match the current public IP address."
authors = [
    { name = "Nathan Spelts", email = "nate@nathanspelts.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pathlib>=1.0.1",
    "requests>=2.25",
]

[project.scripts]
dns-ip-updater = "dns_ip_updater.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

